force-app/main/default/objects/mmu__MigrationException__c/mmu__MigrationException__c.object-meta.xml
<CustomObject>
    <label>Migration Exception</label>
    <nameField>
        <label>Migration Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>