force-app/main/default/objects/mmu__MigrationException__c/fields/mmu__Error__c.field-meta.xml
<CustomField>
    <fullName>mmu__Error__c</fullName>
    <label>Error</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>