force-app/main/default/objects/mmu__MigrationException__c/fields/mmu__LineNumber__c.field-meta.xml
<CustomField>
    <fullName>mmu__LineNumber__c</fullName>
    <label>LineNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>