force-app/main/default/objects/mmu__MigrationException__c/fields/mmu__StackTrace__c.field-meta.xml
<CustomField>
    <fullName>mmu__StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>